--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title>RailsWatchList</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,6 +13,12 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-light bg-light">
+      <%= link_to root_path do %>%
+        <i class="fas fa-video"></i>
+      <% end %>
+    <%= link_to "Add a List", new_list_path, class: "btn btn-primary"  %>
+    </nav>
     <%= yield %>
   </body>
 </html>
