--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -10,7 +10,7 @@
  <div class="card-container">
       <% @lists.each do |list| %>
       <div class="card">
-        <img src="https://source.unsplash.com/1600x900/?nba,<%= list.name %> logo" class="card-img-top" alt="<%= list.name %> logo">
+        <img src="https://source.unsplash.com/1600x900/?<%= list.name %> logo" class="card-img-top" alt="<%= list.name %> logo">
         <div class="card-body">
           <h5 class="card-title"><%= link_to list.name, list_path(list)  %></h5>
           <button type="button" class="btn btn-primary"><i class="far fa-heart"></i></button>
@@ -18,4 +18,3 @@
       </div>
       <% end %>
     </div>
-<%= link_to "New List", new_list_path %>
