--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,11 +1,24 @@
-<h1>Show Movie</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/1600x900/?<%= @list.name%> logo)">
+  <div class = "container">
+      <h1 class = "text-center"><%= @list.name %></h1>
+  </div>
+</div>
+
 
 
 <%= link_to "Add Bookmark", new_list_bookmark_path(@list)%>
 
-<%= @list.movies.each do |movie|%>
-  <%= movie.title %>
-  <% @bookmark = Bookmark.find_by_movie_id(movie.id) %>
-  <%= image_tag @list.movies.first.poster_url%>
-
-<% end %>
+<div class = "card-container">
+  <div class = "card">
+    <%= @list.movies.each do |movie|%>
+    <% @bookmark = Bookmark.find_by_movie_id(movie.id)%>%
+   <img src=<%= movie.poster_url%> class="card-img-top" >
+    <div class="card-body">
+    <h5><%= movie.title %></h5>
+    <h6><%= movie.rating %>⭐️</h6>
+    <p class="card-text mb-2 text-muted"><%= movie.overview %></p>
+    <h6 >🙉 </h6>
+    <p class="text-center"><%= movie.bookmarks.first.comment %></p>
+  </div>
+  <% end %>
+</div>
