--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -4,4 +4,5 @@
   <%= f.input :comment %>
   <%= f.association :movie %>
   <%= f.button :submit, class: "btn btn-primary" %>
+  <%= link_to "Cancel", root_path, class: "btn btn-primary"  %>
 <% end %>
