--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/1600x900/?<%= @list.name%> logo)">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://source.unsplash.com/1600x900/?wonderwoman)">
   <div class = "container">
       <h1 class = "text-center"><%= @list.name %></h1>
   </div>
@@ -20,5 +20,6 @@
     <h6 >🙉 </h6>
     <p class="text-center"><%= movie.bookmarks.first.comment %></p>
   </div>
+    <%= link_to "Delete", bookmark_path(@bookmark), method: :delete, data: {confirm: "Are you sure"}%>
   <% end %>
 </div>
